	  *BEWARE* ths command has no undo feature. Once issued there is no going back.
	- Added '/plot toggle' to the plot help screen.
	- Fixed the error report when Towny fails to perform a daily backup.
	- Slight change to onLogin to try and stop 0kb resident file creation (suspect some other plugin is running in it's own thread kicking a player at the wrong time).
	- Any residents who are corrupt/missing at startup will no longer prevent Towny loading. They will be removed and the files tidied up.
	- Fixed saving of plot regens, so they will now resume after a server restart.
v0.78.0.2:
	- Added '/ta town {name} rename {newname}'
	- Added '/ta nation {name} rename {newname}'
	- Fixed '/towny prices' to correctly display your own towns prices (if you are a resident in a town).
	- Rework of player death and death costs to trigger on a player death and not on damage (no more multiple charges).
	  Players will be charged only when killed by another player, monster or trap like a dispenser firing arrows.
	  Deaths from falling etc will not incur a cost.
v0.78.0.3:
	- Town explosion settings no longer override individual plot settings. They only control the town owned plots.
	- Reworked claiming/unclaim to be threadsafe (no longer throws errors in NoLagg).
	- When claiming new townBlocks and using PlotManagementRevert all new claims will be locked until the snapshot has been taken.
	  Building/breaking in the plot will be disabled until the snapshot is finished.
	- Fixed hook for bPermissions to work with bPerms v2.
	- Fixed '/ta town {name} kick {player}'.
v0.78.0.4:
	- Allow ops all access rights when not using permissions.
	- Removed a lot of New Day spam to cut down on the lag during the accounting.
	- Major reorganization of code in advance of SQL support.
	  Any plugins which hooked TownyUniverse to read data should find the same functions in TownyUniverse.getDataSource().